testsuite/tests/grammar/invalid_lkt/invalid_main_rule_annot.lkt
import lexer_example

grammar foo_grammar {
    @main_rule ("foo") main_rule <- Example("example")
}
